[gd_scene load_steps=5 format=3 uid="uid://bpkfbbqf0c34c"]

[ext_resource type="Script" path="res://scripts/item_drop/ItemDrop.gd" id="1_s53k3"]
[ext_resource type="Texture2D" uid="uid://c2nk05i2u57kd" path="res://assets/drops/heart.png" id="2_8cklh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qy3yt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_70ii4"]

[node name="ItemDrop" type="RigidBody2D"]
collision_layer = 32
script = ExtResource("1_s53k3")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_8cklh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qy3yt")

[node name="DropTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_70ii4")

[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
